--- a/1.html
+++ b/1.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
 <body>
-
-<h1>Pour challenger la convergence managériale, voici notre ambition : réinventer les workshops qualité.<h1>
-
-
-	<img src="corpo.jpeg" width="100%"
-
+<h1>Grâce à une réactivité multi-directionnelle, un meilleur relationnel permet de décloisonner les référents coordination.</h1>
+<img src="corpo.jpeg">
 </body>
+</html>
